--- a/daniyal-portfolio-56.html
+++ b/daniyal-portfolio-56.html
@@ -1168,6 +1168,10 @@
                 <h3>Email & DM Marketing</h3>
             </div>
             <div class="skill-item fade-in">
+                <div class="skill-icon">🤖</div>
+                <h3>n8n Automation</h3>
+            </div>
+            <div class="skill-item fade-in">
                 <div class="skill-icon">📊</div>
                 <h3>Microsoft Office</h3>
             </div>
