--- a/index.html
+++ b/index.html
@@ -114,6 +114,7 @@
             background-clip: text;
             font-family: 'Courier New', monospace;
             letter-spacing: 2px;
+            z-index: 1001;
         }
 
         .logo:hover {
@@ -155,6 +156,22 @@
         .nav-links a:hover,
         .nav-links a.active {
             color: var(--text-primary);
+        }
+
+        /* Mobile Menu Button */
+        .mobile-menu-btn {
+            display: none;
+            background: none;
+            border: none;
+            color: var(--text-primary);
+            font-size: 1.8rem;
+            cursor: pointer;
+            z-index: 1001;
+            padding: 0.5rem;
+        }
+
+        .mobile-menu-btn:focus {
+            outline: none;
         }
 
         /* Hero Section */
@@ -912,16 +929,94 @@
 
         /* Responsive */
         @media (max-width: 768px) {
+            .hero {
+                margin-top: 70px;
+                padding: 1.5rem;
+            }
+
             .hero-title {
                 font-size: 2.5rem;
+            }
+
+            .hero-role {
+                font-size: 1.1rem;
+            }
+
+            .hero-description {
+                font-size: 1rem;
             }
 
             .section-title {
                 font-size: 2rem;
             }
 
+            .section-tag {
+                font-size: 0.8rem;
+            }
+
+            .section-description {
+                font-size: 1rem;
+            }
+
+            section {
+                padding: 4rem 1.5rem;
+            }
+
             .nav-links {
-                display: none;
+                position: fixed;
+                top: 70px;
+                left: 0;
+                right: 0;
+                bottom: 0;
+                background: var(--bg-primary);
+                flex-direction: column;
+                padding: 2rem;
+                gap: 0.5rem;
+                transform: translateX(-100%);
+                transition: transform 0.3s ease;
+                overflow-y: auto;
+                border-top: 1px solid var(--border);
+                z-index: 999;
+            }
+
+            .nav-links.active {
+                transform: translateX(0);
+            }
+
+            .nav-links li {
+                width: 100%;
+            }
+
+            .nav-links a {
+                display: block;
+                padding: 1rem;
+                font-size: 1.1rem;
+                border-radius: 8px;
+            }
+
+            .nav-links a:hover {
+                background: var(--bg-card);
+            }
+
+            .mobile-menu-btn {
+                display: block;
+            }
+
+            .stat-number {
+                font-size: 2rem;
+            }
+
+            .stat-label {
+                font-size: 0.85rem;
+            }
+
+            .about-text p {
+                font-size: 1rem;
+            }
+
+            .btn {
+                padding: 0.9rem 2rem;
+                font-size: 0.95rem;
             }
 
             .timeline {
@@ -934,6 +1029,16 @@
 
             .timeline-item::before {
                 left: -2.25rem;
+                width: 12px;
+                height: 12px;
+            }
+
+            .timeline-item h3 {
+                font-size: 1.3rem;
+            }
+
+            .timeline-company {
+                font-size: 1rem;
             }
 
             .projects-grid,
@@ -941,6 +1046,111 @@
             .education-grid,
             .certifications-grid {
                 grid-template-columns: 1fr;
+            }
+
+            .skills-grid {
+                grid-template-columns: repeat(auto-fit, minmax(120px, 1fr));
+                gap: 1rem;
+            }
+
+            .skill-item {
+                padding: 1.5rem 1rem;
+            }
+
+            .skill-icon {
+                font-size: 2rem;
+            }
+
+            .skill-item h3 {
+                font-size: 0.9rem;
+            }
+
+            .service-card,
+            .project-card,
+            .cert-card,
+            .education-card {
+                padding: 1.5rem;
+            }
+
+            .service-card h3,
+            .project-card h3,
+            .cert-card h3,
+            .education-card h3 {
+                font-size: 1.3rem;
+            }
+
+            .contact-item {
+                font-size: 1rem;
+                flex-direction: column;
+                gap: 0.5rem;
+            }
+
+            .social-links {
+                flex-wrap: wrap;
+            }
+
+            .scroll-top {
+                bottom: 1rem;
+                right: 1rem;
+                width: 45px;
+                height: 45px;
+            }
+        }
+
+        /* Tablet adjustments */
+        @media (max-width: 1024px) and (min-width: 769px) {
+            .hero-title {
+                font-size: 3.5rem;
+            }
+
+            .section-title {
+                font-size: 2.5rem;
+            }
+
+            .services-grid,
+            .projects-grid {
+                grid-template-columns: repeat(2, 1fr);
+            }
+        }
+
+        /* Small phones */
+        @media (max-width: 480px) {
+            .hero-title {
+                font-size: 2rem;
+            }
+
+            .hero-role {
+                font-size: 0.95rem;
+            }
+
+            .logo {
+                font-size: 1.3rem;
+            }
+
+            .nav-container {
+                padding: 1rem 1.5rem;
+            }
+
+            .btn {
+                padding: 0.8rem 1.5rem;
+                font-size: 0.9rem;
+            }
+
+            .hero-buttons {
+                flex-direction: column;
+                width: 100%;
+            }
+
+            .hero-buttons .btn {
+                width: 100%;
+            }
+
+            .stat-card {
+                padding: 1.5rem 1rem;
+            }
+
+            .skills-grid {
+                grid-template-columns: repeat(2, 1fr);
             }
         }
 
@@ -1021,7 +1231,7 @@
         <div class="hero-content">
             <div class="hero-subtitle">🎯 Lead Generation & 🔒 Cybersecurity Expert</div>
             <h1 class="hero-title">Daniyal Rashid</h1>
-            <p class="hero-role">Lead Generation Specialist | Virtual Assistant | Cybersecurity Expert</p>
+            <p class="hero-role">Cybersecurity Practitioner | Lead Generation Specialist | Remote Virtual Assistant</p>
             <p class="hero-description">
                 Transforming prospects into customers through data-driven outreach and secure automation. Specialized in lead generation, social media growth, and cybersecurity fundamentals.
             </p>
