--- a/index.html
+++ b/index.html
@@ -168,10 +168,15 @@
             cursor: pointer;
             z-index: 1001;
             padding: 0.5rem;
+            transition: transform 0.3s;
         }
 
         .mobile-menu-btn:focus {
             outline: none;
+        }
+
+        .mobile-menu-btn.active {
+            transform: rotate(90deg);
         }
 
         /* Hero Section */
@@ -931,35 +936,66 @@
         @media (max-width: 768px) {
             .hero {
                 margin-top: 70px;
-                padding: 1.5rem;
+                padding: 1.5rem 1rem;
+                min-height: calc(100vh - 70px);
+            }
+
+            .hero-content {
+                max-width: 100%;
+            }
+
+            .hero-subtitle {
+                font-size: 0.85rem;
+                letter-spacing: 2px;
+                margin-bottom: 0.75rem;
             }
 
             .hero-title {
                 font-size: 2.5rem;
+                line-height: 1.2;
+                margin-bottom: 1rem;
             }
 
             .hero-role {
                 font-size: 1.1rem;
+                margin-bottom: 1.5rem;
             }
 
             .hero-description {
                 font-size: 1rem;
+                margin-bottom: 2rem;
+                line-height: 1.7;
             }
 
             .section-title {
                 font-size: 2rem;
+                line-height: 1.2;
             }
 
             .section-tag {
-                font-size: 0.8rem;
+                font-size: 0.75rem;
+                letter-spacing: 2px;
             }
 
             .section-description {
-                font-size: 1rem;
+                font-size: 0.95rem;
+                line-height: 1.6;
+            }
+
+            .section-header {
+                margin-bottom: 3rem;
             }
 
             section {
-                padding: 4rem 1.5rem;
+                padding: 3.5rem 1rem;
+            }
+
+            .nav-container {
+                padding: 1rem 1.5rem;
+            }
+
+            nav {
+                border-bottom-width: 1px;
             }
 
             .nav-links {
@@ -968,15 +1004,17 @@
                 left: 0;
                 right: 0;
                 bottom: 0;
-                background: var(--bg-primary);
+                background: rgba(10, 10, 10, 0.98);
+                backdrop-filter: blur(20px);
                 flex-direction: column;
-                padding: 2rem;
-                gap: 0.5rem;
+                padding: 2rem 1.5rem;
+                gap: 0.25rem;
                 transform: translateX(-100%);
                 transition: transform 0.3s ease;
                 overflow-y: auto;
                 border-top: 1px solid var(--border);
                 z-index: 999;
+                max-height: calc(100vh - 70px);
             }
 
             .nav-links.active {
@@ -989,56 +1027,126 @@
 
             .nav-links a {
                 display: block;
-                padding: 1rem;
-                font-size: 1.1rem;
+                padding: 1rem 1.25rem;
+                font-size: 1.05rem;
                 border-radius: 8px;
+                min-height: 48px;
+                display: flex;
+                align-items: center;
             }
 
-            .nav-links a:hover {
+            .nav-links a:hover,
+            .nav-links a.active {
                 background: var(--bg-card);
+            }
+
+            .nav-links a::after {
+                display: none;
+            }
+
+            /* Improve text wrapping on mobile */
+            .hero-title,
+            .section-title {
+                word-wrap: break-word;
+                overflow-wrap: break-word;
+            }
+
+            /* Better spacing for long text */
+            .about-text,
+            .service-card p,
+            .project-card p,
+            .cert-description {
+                word-wrap: break-word;
+                overflow-wrap: break-word;
+                hyphens: auto;
             }
 
             .mobile-menu-btn {
                 display: block;
             }
 
+            .stats-grid {
+                grid-template-columns: repeat(2, 1fr);
+                gap: 1rem;
+                margin-top: 2rem;
+            }
+
+            .stat-card {
+                padding: 1.5rem 1rem;
+            }
+
             .stat-number {
-                font-size: 2rem;
+                font-size: 1.75rem;
             }
 
             .stat-label {
-                font-size: 0.85rem;
+                font-size: 0.8rem;
             }
 
             .about-text p {
-                font-size: 1rem;
+                font-size: 0.95rem;
+                line-height: 1.7;
+                margin-bottom: 1.25rem;
             }
 
             .btn {
                 padding: 0.9rem 2rem;
                 font-size: 0.95rem;
+                min-height: 48px;
+                display: inline-flex;
+                align-items: center;
+                justify-content: center;
+            }
+
+            .hero-buttons {
+                gap: 0.75rem;
             }
 
             .timeline {
                 padding-left: 1.5rem;
             }
 
+            .timeline::before {
+                left: 0.5rem;
+                width: 2px;
+            }
+
             .timeline-item {
                 padding-left: 1.5rem;
+                margin-bottom: 3rem;
             }
 
             .timeline-item::before {
-                left: -2.25rem;
+                left: -1.75rem;
                 width: 12px;
                 height: 12px;
+                border-width: 3px;
             }
 
             .timeline-item h3 {
-                font-size: 1.3rem;
+                font-size: 1.2rem;
+                line-height: 1.3;
             }
 
             .timeline-company {
-                font-size: 1rem;
+                font-size: 0.95rem;
+            }
+
+            .timeline-meta {
+                font-size: 0.85rem;
+                flex-direction: column;
+                gap: 0.5rem;
+                margin-bottom: 1rem;
+            }
+
+            .timeline-item ul {
+                margin-left: 1.25rem;
+                font-size: 0.9rem;
+                line-height: 1.7;
+            }
+
+            .timeline-item li {
+                margin-bottom: 0.75rem;
             }
 
             .projects-grid,
@@ -1046,23 +1154,27 @@
             .education-grid,
             .certifications-grid {
                 grid-template-columns: 1fr;
+                gap: 1.5rem;
             }
 
             .skills-grid {
-                grid-template-columns: repeat(auto-fit, minmax(120px, 1fr));
+                grid-template-columns: repeat(2, 1fr);
                 gap: 1rem;
             }
 
             .skill-item {
-                padding: 1.5rem 1rem;
+                padding: 1.25rem 0.75rem;
+                min-height: 120px;
             }
 
             .skill-icon {
                 font-size: 2rem;
+                margin-bottom: 0.5rem;
             }
 
             .skill-item h3 {
-                font-size: 0.9rem;
+                font-size: 0.85rem;
+                line-height: 1.3;
             }
 
             .service-card,
@@ -1076,17 +1188,73 @@
             .project-card h3,
             .cert-card h3,
             .education-card h3 {
-                font-size: 1.3rem;
+                font-size: 1.25rem;
+                line-height: 1.3;
+                margin-bottom: 0.75rem;
+            }
+
+            .service-card p,
+            .project-card p,
+            .cert-card p {
+                font-size: 0.9rem;
+                line-height: 1.7;
+            }
+
+            .service-icon {
+                width: 50px;
+                height: 50px;
+                font-size: 1.5rem;
+                margin-bottom: 1rem;
+            }
+
+            .cert-badge {
+                width: 50px;
+                height: 50px;
+                font-size: 1.5rem;
+                margin-bottom: 0.75rem;
+            }
+
+            .project-tech {
+                gap: 0.4rem;
+                margin-bottom: 1rem;
+            }
+
+            .tech-tag {
+                padding: 0.35rem 0.7rem;
+                font-size: 0.8rem;
+            }
+
+            .project-link {
+                font-size: 0.9rem;
+                min-height: 44px;
+                display: inline-flex;
+                align-items: center;
             }
 
             .contact-item {
-                font-size: 1rem;
+                font-size: 0.95rem;
                 flex-direction: column;
                 gap: 0.5rem;
+                padding: 1rem;
+                text-align: center;
+            }
+
+            .contact-item span {
+                font-size: 1.5rem;
             }
 
             .social-links {
                 flex-wrap: wrap;
+                gap: 0.75rem;
+                margin-top: 2rem;
+            }
+
+            .social-link {
+                width: 50px;
+                height: 50px;
+                font-size: 1.3rem;
+                min-width: 50px;
+                min-height: 50px;
             }
 
             .scroll-top {
@@ -1094,6 +1262,26 @@
                 right: 1rem;
                 width: 45px;
                 height: 45px;
+                font-size: 1.2rem;
+            }
+
+            .bg-animation::before {
+                width: 400px;
+                height: 400px;
+            }
+
+            .bg-animation::after {
+                width: 350px;
+                height: 350px;
+            }
+
+            footer {
+                padding: 1.5rem 1rem;
+                font-size: 0.85rem;
+            }
+
+            footer p {
+                line-height: 1.6;
             }
         }
 
@@ -1115,42 +1303,204 @@
 
         /* Small phones */
         @media (max-width: 480px) {
+            .hero {
+                padding: 1rem 0.75rem;
+            }
+
+            .hero-subtitle {
+                font-size: 0.75rem;
+                letter-spacing: 1.5px;
+            }
+
             .hero-title {
-                font-size: 2rem;
+                font-size: 1.75rem;
+                line-height: 1.1;
             }
 
             .hero-role {
-                font-size: 0.95rem;
+                font-size: 0.9rem;
+                margin-bottom: 1.25rem;
+            }
+
+            .hero-description {
+                font-size: 0.9rem;
+                margin-bottom: 1.75rem;
             }
 
             .logo {
-                font-size: 1.3rem;
+                font-size: 1.2rem;
             }
 
             .nav-container {
-                padding: 1rem 1.5rem;
+                padding: 0.875rem 1rem;
+            }
+
+            nav {
+                border-bottom-width: 1px;
+            }
+
+            .nav-links {
+                top: 60px;
+                padding: 1.5rem 1rem;
+                max-height: calc(100vh - 60px);
+            }
+
+            .nav-links a {
+                padding: 0.875rem 1rem;
+                font-size: 1rem;
             }
 
             .btn {
-                padding: 0.8rem 1.5rem;
+                padding: 0.875rem 1.5rem;
                 font-size: 0.9rem;
+                width: 100%;
             }
 
             .hero-buttons {
                 flex-direction: column;
                 width: 100%;
+                gap: 0.625rem;
             }
 
-            .hero-buttons .btn {
-                width: 100%;
+            .section-title {
+                font-size: 1.75rem;
+            }
+
+            .section-tag {
+                font-size: 0.7rem;
+            }
+
+            section {
+                padding: 3rem 0.75rem;
+            }
+
+            .stats-grid {
+                grid-template-columns: 1fr;
+                gap: 0.875rem;
             }
 
             .stat-card {
-                padding: 1.5rem 1rem;
+                padding: 1.25rem 0.875rem;
+            }
+
+            .stat-number {
+                font-size: 1.5rem;
+            }
+
+            .stat-label {
+                font-size: 0.75rem;
+            }
+
+            .about-text p {
+                font-size: 0.9rem;
             }
 
             .skills-grid {
                 grid-template-columns: repeat(2, 1fr);
+                gap: 0.75rem;
+            }
+
+            .skill-item {
+                padding: 1rem 0.5rem;
+                min-height: 100px;
+            }
+
+            .skill-icon {
+                font-size: 1.75rem;
+            }
+
+            .skill-item h3 {
+                font-size: 0.8rem;
+            }
+
+            .service-card,
+            .project-card,
+            .cert-card,
+            .education-card {
+                padding: 1.25rem;
+            }
+
+            .service-card h3,
+            .project-card h3,
+            .cert-card h3,
+            .education-card h3 {
+                font-size: 1.15rem;
+            }
+
+            .service-card p,
+            .project-card p,
+            .cert-card p {
+                font-size: 0.85rem;
+            }
+
+            .timeline-item h3 {
+                font-size: 1.1rem;
+            }
+
+            .timeline-item ul {
+                font-size: 0.85rem;
+            }
+
+            .contact-item {
+                font-size: 0.9rem;
+                padding: 0.875rem;
+            }
+
+            .social-link {
+                width: 45px;
+                height: 45px;
+                font-size: 1.2rem;
+                min-width: 45px;
+                min-height: 45px;
+            }
+
+            .scroll-top {
+                bottom: 0.75rem;
+                right: 0.75rem;
+                width: 40px;
+                height: 40px;
+                font-size: 1.1rem;
+            }
+
+            footer {
+                padding: 1.25rem 0.75rem;
+                font-size: 0.8rem;
+            }
+
+            /* Ensure buttons are full width on very small screens */
+            .hero-buttons .btn {
+                width: 100%;
+            }
+
+            /* Better text wrapping */
+            .hero-title,
+            .section-title {
+                word-wrap: break-word;
+                overflow-wrap: break-word;
+                hyphens: auto;
+            }
+        }
+
+        /* Extra small devices (landscape phones, less than 400px) */
+        @media (max-width: 400px) {
+            .hero-title {
+                font-size: 1.5rem;
+            }
+
+            .section-title {
+                font-size: 1.5rem;
+            }
+
+            .skill-item h3 {
+                font-size: 0.75rem;
+            }
+
+            .stats-grid {
+                gap: 0.75rem;
+            }
+
+            .stat-number {
+                font-size: 1.35rem;
             }
         }
 
@@ -1213,7 +1563,8 @@
     <nav>
         <div class="nav-container">
             <a href="#" class="logo">&lt;DR/&gt;</a>
-            <ul class="nav-links">
+            <button class="mobile-menu-btn" id="mobileMenuBtn" aria-label="Toggle menu">☰</button>
+            <ul class="nav-links" id="navLinks">
                 <li><a href="#about">About</a></li>
                 <li><a href="#services">Services</a></li>
                 <li><a href="#skills">Skills</a></li>
@@ -1641,6 +1992,38 @@
     </div>
 
     <script>
+        // Mobile menu toggle
+        const mobileMenuBtn = document.getElementById('mobileMenuBtn');
+        const navLinks = document.getElementById('navLinks');
+        const navLinkItems = document.querySelectorAll('.nav-links a');
+
+        mobileMenuBtn.addEventListener('click', () => {
+            navLinks.classList.toggle('active');
+            mobileMenuBtn.classList.toggle('active');
+            // Change icon
+            mobileMenuBtn.textContent = navLinks.classList.contains('active') ? '✕' : '☰';
+        });
+
+        // Close mobile menu when clicking on a link
+        navLinkItems.forEach(link => {
+            link.addEventListener('click', () => {
+                navLinks.classList.remove('active');
+                mobileMenuBtn.classList.remove('active');
+                mobileMenuBtn.textContent = '☰';
+            });
+        });
+
+        // Close mobile menu when clicking outside
+        document.addEventListener('click', (e) => {
+            if (navLinks.classList.contains('active') && 
+                !navLinks.contains(e.target) && 
+                !mobileMenuBtn.contains(e.target)) {
+                navLinks.classList.remove('active');
+                mobileMenuBtn.classList.remove('active');
+                mobileMenuBtn.textContent = '☰';
+            }
+        });
+
         // Smooth scroll animation observer
         const observerOptions = {
             threshold: 0.05,
@@ -1662,7 +2045,6 @@
 
         // Active nav link on scroll
         const sections = document.querySelectorAll('section');
-        const navLinks = document.querySelectorAll('.nav-links a');
         const nav = document.querySelector('nav');
         const scrollTopBtn = document.querySelector('.scroll-top');
 
@@ -1676,6 +2058,14 @@
                 scrollTopBtn.classList.remove('visible');
             }
 
+            // Close mobile menu on scroll
+            if (navLinks.classList.contains('active')) {
+                navLinks.classList.remove('active');
+                mobileMenuBtn.classList.remove('active');
+                mobileMenuBtn.textContent = '☰';
+                document.body.style.overflow = '';
+            }
+
             // Active section highlighting
             let current = '';
             sections.forEach(section => {
@@ -1686,7 +2076,7 @@
                 }
             });
 
-            navLinks.forEach(link => {
+            navLinkItems.forEach(link => {
                 link.classList.remove('active');
                 if (link.getAttribute('href').substring(1) === current) {
                     link.classList.add('active');
@@ -1695,7 +2085,7 @@
         });
 
         // Smooth scroll for nav links
-        navLinks.forEach(link => {
+        navLinkItems.forEach(link => {
             link.addEventListener('click', (e) => {
                 e.preventDefault();
                 const targetId = link.getAttribute('href');
@@ -1713,6 +2103,22 @@
         // Reduce stagger delay for faster animations
         document.querySelectorAll('.services-grid .service-card, .skills-grid .skill-item, .projects-grid .project-card').forEach((card, index) => {
             card.style.transitionDelay = `${index * 0.05}s`;
+        });
+
+        // Prevent body scroll when mobile menu is open
+        mobileMenuBtn.addEventListener('click', () => {
+            if (navLinks.classList.contains('active')) {
+                document.body.style.overflow = 'hidden';
+            } else {
+                document.body.style.overflow = '';
+            }
+        });
+
+        // Reset body overflow when menu closes
+        navLinkItems.forEach(link => {
+            link.addEventListener('click', () => {
+                document.body.style.overflow = '';
+            });
         });
     </script>
 </body>
